# dota2_tui

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: config.toml
src/: api.rs  app.rs  config.rs  i18n.rs  image.rs  input.rs  main.rs  models.rs
src/ui/: banner.rs  helpers.rs  images.rs  mod.rs  panels.rs  tables.rs
tests/: opendota_live.rs
