[package]
name = "dota2_tui"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
crossterm = { version = "0.27", features = ["event-stream"] }
dirs = "5.0"
futures = "0.3"
ratatui = "0.26"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "time"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
